--- a/src/fxml/Inventory.fxml
+++ b/src/fxml/Inventory.fxml
@@ -9,8 +9,8 @@
    <children>
       <TableView fx:id="inventoryTableView" layoutX="100.0" layoutY="86.0" prefHeight="500.0" prefWidth="800.0">
         <columns>
-          <TableColumn minWidth="400.0" prefWidth="400.0" text="Produits" />
-          <TableColumn minWidth="400.0" prefWidth="75.0" text="Quantités" />
+          <TableColumn fx:id="products" minWidth="400.0" prefWidth="400.0" text="Produits" />
+          <TableColumn fx:id="quantity" minWidth="400.0" prefWidth="75.0" text="Quantités" />
         </columns>
       </TableView>
    </children>
