--- a/src/fxml/MenuBar.fxml
+++ b/src/fxml/MenuBar.fxml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<HBox alignment="CENTER" prefHeight="75.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main">
    <children>
-      <Label fx:id="goToField" alignment="CENTER" contentDisplay="CENTER" text="Champs">
-         <HBox.margin>
-            <Insets right="10.0" />
-         </HBox.margin>
-      </Label>
-      <Label fx:id="goToInventory" alignment="CENTER" contentDisplay="CENTER" layoutX="484.0" layoutY="40.0" text="Inventaire">
-         <HBox.margin>
-            <Insets />
-         </HBox.margin>
-      </Label>
+      <ImageView fx:id="goToField" fitHeight="75.0" fitWidth="200.0" layoutX="463.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="/images/field.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="goToMarket" fitHeight="75.0" fitWidth="200.0" layoutX="762.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="/images/market.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="goToInventory" fitHeight="75.0" fitWidth="200.0" layoutX="172.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="/images/inventory.png" />
+         </image>
+      </ImageView>
    </children>
-</HBox>
+</AnchorPane>
